Refactor using traditional conventions
PascalCase class names and function names, camelCase parameter args, private members noted with an underscore and pascalCase, foreach instead of for() for any collection iteration, spacing between methods, descriptive parameter names, move structs/enums out of file, static classes where only static methods are defined, all brackets on their own line, var instead of explicit types, other small changes

--- a/ConsoleApplication2/ChaOS 51.15.1 REV2 (CORRUPT).csproj
+++ b/ConsoleApplication2/ChaOS 51.15.1 REV2 (CORRUPT).csproj
@@ -60,6 +60,8 @@
   <ItemGroup>
     <Compile Include="AI.cs" />
     <Compile Include="Branch1.cs" />
+    <Compile Include="Command.cs" />
+    <Compile Include="CommandFlags.cs" />
     <Compile Include="CommandProcessor.cs" />
     <Compile Include="Console.cs" />
     <Compile Include="Graphics.cs" />
