--- a/ConsoleApplication2/ChaOS 51.15.1 REV2 (CORRUPT).csproj
+++ b/ConsoleApplication2/ChaOS 51.15.1 REV2 (CORRUPT).csproj
@@ -37,6 +37,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <UseVSHostingProcess>true</UseVSHostingProcess>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -111,6 +112,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StartScreen.cs" />
+    <Compile Include="VFS.cs" />
     <Compile Include="Writer.cs" />
   </ItemGroup>
   <ItemGroup>
